force-app/main/default/objects/B2B_Requests_to_RA__c/B2B_Requests_to_RA__c.object-meta.xml
<CustomObject>
    <label>B2B Requests to RA</label>
    <nameField>
        <label>B2B Requests to RA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Requests to RA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>