force-app/main/default/objects/B2B_Requests_to_RA__c/fields/ADL_Documents_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ADL_Documents_Remarks__c</fullName>
    <label>ADL Documents Remarks</label>
    <type>TextArea</type>
</CustomField>