force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Agreed_response_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreed_response_Date__c</fullName>
    <label>Agreed response Date</label>
    <type>Date</type>
</CustomField>