force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Analytical_Method_Validation_Report__c.field-meta.xml
<CustomField>
    <fullName>Analytical_Method_Validation_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytical Method Validation Report</label>
    <type>Checkbox</type>
</CustomField>