force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Audit_Questionnaires__c.field-meta.xml
<CustomField>
    <fullName>Audit_Questionnaires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Questionnaires</label>
    <type>Checkbox</type>
</CustomField>