force-app/main/default/objects/B2B_Requests_to_RA__c/fields/CEP_Reference_Copy__c.field-meta.xml
<CustomField>
    <fullName>CEP_Reference_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEP Reference Copy</label>
    <type>Checkbox</type>
</CustomField>