force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Characterization_Report_of_Impurities__c.field-meta.xml
<CustomField>
    <fullName>Characterization_Report_of_Impurities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Characterization Report of Impurities</label>
    <type>Checkbox</type>
</CustomField>