force-app/main/default/objects/B2B_Requests_to_RA__c/fields/CoA__c.field-meta.xml
<CustomField>
    <fullName>CoA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoA</label>
    <type>Checkbox</type>
</CustomField>