force-app/main/default/objects/B2B_Requests_to_RA__c/fields/COA_RD__c.field-meta.xml
<CustomField>
    <fullName>COA_RD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COA</label>
    <type>Checkbox</type>
</CustomField>