force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declarations</label>
    <type>Checkbox</type>
</CustomField>