force-app/main/default/objects/B2B_Requests_to_RA__c/fields/DMF__c.field-meta.xml
<CustomField>
    <fullName>DMF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMF</label>
    <type>Checkbox</type>
</CustomField>