force-app/main/default/objects/B2B_Requests_to_RA__c/fields/DoA__c.field-meta.xml
<CustomField>
    <fullName>DoA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoA</label>
    <type>Checkbox</type>
</CustomField>