force-app/main/default/objects/B2B_Requests_to_RA__c/fields/End_Market__c.field-meta.xml
<CustomField>
    <fullName>End_Market__c</fullName>
    <label>End Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>End_Market_Picklist</valueSetName>
    </valueSet>
</CustomField>