force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Expected_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Response_Date__c</fullName>
    <label>Expected Response Date</label>
    <type>Date</type>
</CustomField>