force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Flow_Chart__c.field-meta.xml
<CustomField>
    <fullName>Flow_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Chart</label>
    <type>Checkbox</type>
</CustomField>