force-app/main/default/objects/B2B_Requests_to_RA__c/fields/GMP_Certificate__c.field-meta.xml
<CustomField>
    <fullName>GMP_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GMP Certificate</label>
    <type>Checkbox</type>
</CustomField>