force-app/main/default/objects/B2B_Requests_to_RA__c/fields/GMP_clearance_documents__c.field-meta.xml
<CustomField>
    <fullName>GMP_clearance_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GMP clearance documents</label>
    <type>Checkbox</type>
</CustomField>