force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Grade_of_Product__c.field-meta.xml
<CustomField>
    <fullName>Grade_of_Product__c</fullName>
    <label>Grade of Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>