force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Impurity_profile__c.field-meta.xml
<CustomField>
    <fullName>Impurity_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impurity profile</label>
    <type>Checkbox</type>
</CustomField>