force-app/main/default/objects/B2B_Requests_to_RA__c/fields/IP_Report__c.field-meta.xml
<CustomField>
    <fullName>IP_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Report</label>
    <type>Checkbox</type>
</CustomField>