force-app/main/default/objects/B2B_Requests_to_RA__c/fields/IPR_Documents_Remarks__c.field-meta.xml
<CustomField>
    <fullName>IPR_Documents_Remarks__c</fullName>
    <label>IPR Documents Remarks</label>
    <type>TextArea</type>
</CustomField>