force-app/main/default/objects/B2B_Requests_to_RA__c/fields/ISO_Certificates__c.field-meta.xml
<CustomField>
    <fullName>ISO_Certificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO Certificates</label>
    <type>Checkbox</type>
</CustomField>