force-app/main/default/objects/B2B_Requests_to_RA__c/fields/LoA__c.field-meta.xml
<CustomField>
    <fullName>LoA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoA</label>
    <type>Checkbox</type>
</CustomField>