force-app/main/default/objects/B2B_Requests_to_RA__c/fields/LoE__c.field-meta.xml
<CustomField>
    <fullName>LoE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoE</label>
    <type>Checkbox</type>
</CustomField>