force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Manufacturing_License__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufacturing License</label>
    <type>Checkbox</type>
</CustomField>