force-app/main/default/objects/B2B_Requests_to_RA__c/fields/MSDS__c.field-meta.xml
<CustomField>
    <fullName>MSDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSDS</label>
    <type>Checkbox</type>
</CustomField>