force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Notarised_Documents__c.field-meta.xml
<CustomField>
    <fullName>Notarised_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notarised Documents</label>
    <type>Checkbox</type>
</CustomField>