force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Other_RD__c.field-meta.xml
<CustomField>
    <fullName>Other_RD__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>