force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>