force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Others_RD__c.field-meta.xml
<CustomField>
    <fullName>Others_RD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Others</label>
    <type>Checkbox</type>
</CustomField>