force-app/main/default/objects/B2B_Requests_to_RA__c/fields/PSD_Trend__c.field-meta.xml
<CustomField>
    <fullName>PSD_Trend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSD Trend</label>
    <type>Checkbox</type>
</CustomField>