force-app/main/default/objects/B2B_Requests_to_RA__c/fields/QA_Documents_Remarks__c.field-meta.xml
<CustomField>
    <fullName>QA_Documents_Remarks__c</fullName>
    <label>QA Documents Remarks</label>
    <type>TextArea</type>
</CustomField>