force-app/main/default/objects/B2B_Requests_to_RA__c/fields/QP_Documents__c.field-meta.xml
<CustomField>
    <fullName>QP_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QP Documents</label>
    <type>Checkbox</type>
</CustomField>