force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Quality_Trend__c.field-meta.xml
<CustomField>
    <fullName>Quality_Trend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Trend</label>
    <type>Checkbox</type>
</CustomField>