force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Queries_Clarifications__c.field-meta.xml
<CustomField>
    <fullName>Queries_Clarifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queries/Clarifications</label>
    <type>Checkbox</type>
</CustomField>