force-app/main/default/objects/B2B_Requests_to_RA__c/fields/RA_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>RA_Documents_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RA Documents Received</label>
    <type>Checkbox</type>
</CustomField>