force-app/main/default/objects/B2B_Requests_to_RA__c/fields/RA_Documents_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RA_Documents_Remarks__c</fullName>
    <label>RA Documents Remarks</label>
    <type>TextArea</type>
</CustomField>