force-app/main/default/objects/B2B_Requests_to_RA__c/fields/RA_Service_Team_Response__c.field-meta.xml
<CustomField>
    <fullName>RA_Service_Team_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RA Service Team Response</label>
    <type>Checkbox</type>
</CustomField>