force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Regulatory_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Certificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Certificates</label>
    <type>Checkbox</type>
</CustomField>