force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Reminders__c.field-meta.xml
<CustomField>
    <fullName>Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminders</label>
    <type>Checkbox</type>
</CustomField>