force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <label>Request Description</label>
    <type>TextArea</type>
</CustomField>