force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Responsible_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>B2B_Requests_to_RA</relationshipName>
    <type>Lookup</type>
</CustomField>