force-app/main/default/objects/B2B_Requests_to_RA__c/fields/ROS__c.field-meta.xml
<CustomField>
    <fullName>ROS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROS</label>
    <type>Checkbox</type>
</CustomField>