force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Route_of_Synthesis__c.field-meta.xml
<CustomField>
    <fullName>Route_of_Synthesis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route of Synthesis</label>
    <type>Checkbox</type>
</CustomField>