force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Site_Master_File__c.field-meta.xml
<CustomField>
    <fullName>Site_Master_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Master File</label>
    <type>Checkbox</type>
</CustomField>