force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specification</label>
    <type>Checkbox</type>
</CustomField>