force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Specifications_QA__c.field-meta.xml
<CustomField>
    <fullName>Specifications_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specifications</label>
    <type>Checkbox</type>
</CustomField>