force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Stability_Data__c.field-meta.xml
<CustomField>
    <fullName>Stability_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stability Data</label>
    <type>Checkbox</type>
</CustomField>