force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed by BD</fullName>
            </value>
            <value>
                <fullName>Closed by TS</fullName>
            </value>
            <value>
                <fullName>Closed by BD System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>