force-app/main/default/objects/B2B_Requests_to_RA__c/fields/STP__c.field-meta.xml
<CustomField>
    <fullName>STP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STP</label>
    <type>Checkbox</type>
</CustomField>