force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Technical_Package_RD__c.field-meta.xml
<CustomField>
    <fullName>Technical_Package_RD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Package</label>
    <type>Checkbox</type>
</CustomField>