force-app/main/default/objects/B2B_Requests_to_RA__c/fields/TS_Response_Description__c.field-meta.xml
<CustomField>
    <fullName>TS_Response_Description__c</fullName>
    <label>TS Response Description</label>
    <type>TextArea</type>
</CustomField>