force-app/main/default/objects/B2B_Requests_to_RA__c/fields/TS_Status_Others__c.field-meta.xml
<CustomField>
    <fullName>TS_Status_Others__c</fullName>
    <label>TS Status Others</label>
    <type>TextArea</type>
</CustomField>