force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Vendor_Questionnaire_RFI__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Questionnaire_RFI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Questionnaire / RFI</label>
    <type>Checkbox</type>
</CustomField>