force-app/main/default/objects/B2B_Requests_to_RA__c/fields/Written_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Written_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Written Confirmation</label>
    <type>Checkbox</type>
</CustomField>